# vl8

./: .coveragerc  .gitignore  CHANGELOG  README.md  README.rst  ROADMAP.rst  deliverables.txt  pyproject.toml  requirements.txt  setup.py  sorta.py  test_requirements.txt  test_sorta.py  test_vl8.py  util.py  vl8.py  write_all.py
docs/: processing-digital-audio-in-python.md
notes/: README.md  deliverables.txt  old-readme.rst
old/: convert.py
old/vl8/: __main__.py
old/vl8/config/: config.py  expand.py  parse_args.py
old/vl8/dsp/: choose.py  clean.py  curve_cache.py  data.py  default_sample_rate.py  envelope.py  external.py  fade.py  grain.py  io.py  pydub_io.py  rand.py  rubberband.py  shuffle.py  soundfile_io.py  waveforms_scipy.py  wavemap_io.py
studies/: studies.py  study1.py  study2.py
test/: assert_files_equal.py  read_wave.py  standalone.py  test.yml  test_config.py  test_envelope.py  test_expand.py  test_fader.py  test_grain.py  test_gray.py  test_io.py  test_main.py  test_npf.py  test_sample.py  test_validate.py  test_vl8.py
test/config/: test_config.py  test_expand.py  test_validate.py
test/dsp/: assert_files_equal.py  grain-results.json  test_combine.py  test_envelope.py  test_fader.py  test_grain.py  test_io.py  test_stretch.py
test/function/: test_bound_function.py  test_func_args.py  test_function.py  test_function_call.py  test_importer.py  test_periodic.py  test_separate_commands.py
test/functions/: test_cat.py  test_catenate.py  test_combine.py  test_stripe.py
test/old/: assert_files_equal.py  skip.py  test_main.py
test/tasks/: test_combine.py
test/types/: test_duration.py  test_prop.py  test_ratio.py  test_setter_dataclass.py  test_to_fraction.py
test/util/: test_duration.py  test_ffprobe.py  test_gray.py  test_ratio.py
vl8/: __main__.py  combine.py  config.py  envelope.py  fader.py  grains.py  granular.py  gray.py  io.py  npf.py  sample.py  util.py  vl8.py
vl8/config/: __init__.py  args.py  arguments.py  config.py  expand.py  functions.py  options.py  parse.py  parse_args.py  sources.py  tasks.py  validate.py
vl8/dsp/: choose.py  curve_cache.py  data.py  envelope.py  external.py  fade.py  fader.py  file.py  fix_gaps.py  grain.py  grains.py  io.py  memmap.py  mmap_wave.py  rand.py  rubberband.py  sample.py  scale.py  shuffle.py  soundfile_io.py  stretch.py  time_grain.py
vl8/function/: __init__.py  abbrev.py  bound_function.py  creator.py  func_args.py  function.py  function_call.py  function_calls.py  function_names.py  generator.py  importer.py  periodic.py  run.py  run_functions.py  separate_commands.py
vl8/functions/: at_once.py  cat.py  catenate.py  precis.py  reflect.py  reverse.py  stripe.py  task.py
vl8/processor/: catenate.py
vl8/tasks/: at_once.py  combine.py  fade.py  mix.py  old_cat.py  reverse.py  shuffler.py  sorter.py  stripe.py  task.py
vl8/types/: __init__.py  duration.py  prop.py  ratio.py  setter_dataclass.py  to_fraction.py  to_number.py  to_number_list.py  types.py  units.py
vl8/util/: audio_formats.py  catcher.py  duration.py  ffprobe.py  fix_gaps.py  ratio.py
(+54 files in other folders)
