[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py37']

[tool.doks]
auto = true

[tool.poetry]
name = "vl8"
version = "0.2.0"
description = "🔉 vl8: perturbed audio 🔉"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
