[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py37']

[tool.doks]
auto = true

[tool.poetry]
name = "vl8"
version = "0.2.0"
description = "🔉 Perturbed audio 🔉"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
abbrev = "^1.0.1"
graycode = "^1.0.5"
more-itertools = "^9.0.0"
numpy = "^1.24.1"
pydub = "^0.25.1"
pyyaml = "^6.0"
runs = "^1.1.0"
soundfile = "^0.11.0"
stroll = "^1.1.0"
tdir = "^1.4.1"
toml = "^0.10.2"
typeguard = "^2.13.3"
wavemap = "^2.0.1"
xmod = "^1.3.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"
flake8 = "^6.0.0"
impall = "^1.1.1"
pytest = "^7.2.1"
tdir = "^1.4.1"


[tool.coverage]
[tool.coverage.run]
branch = "True"
source = "vl8"

[tool.coverage.report]
fail_under = "60"
skip_covered = "True"
exclude_lines = ["", "pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
